vlib/v/parser/tests/unexpected_string_interpolation.vv

fn main() {
	a := 123
	println('Foo = ${a}')
	println('Foo = ${unsafe {a}}')
}
